Changelog
=========

v1.0.1
======
 
 Released on November 9, 2018.

- Bump: FatturaElettronica.Core to 1.0.

v1.0
====
 
 Released on November 9, 2018.

- BREAKING: proprietà Fattura.Header rinominata in FatturaElettronicaHeader. Closes #83.
- BREAKING: proprietà Fattura.Body rinominata in FatturaElettronicaBody. Closes #83.
- BREAKING: namespace FatturaElettronica.Impostazioni rinominato FatturaElettronica.Defaults.

- Fix: Aggiornati codici INCOTERMS (Marco Tessitore). Pull #89; Pull #91.
- Fix: Rimosso controllo 00426 su campo PECDestinatario (Gaetano Pizzol). Pull #88.
- Fix: Anagrafica.CognomeNome non deve essere serializzato in JSON. Closes #86.
- Fix: DettaglioPagamento.IBAN deve essere formalmente corretto. Closes #84.
- Fix: Campo RiferimentoNumero dovrebbe essere opzionale (Gaetano Pizzol). Pull #82.
- Fix: Aggiunto setter mancante a DettaglioLinee.AltriDatiGestionali. Addresses #81.
- Fix: Header e Body vanno JSON-serializzati come FatturaElettronicaHeader e FatturaElettronicaBody. Closes #83.

- Bump: FatturaElettronica.Core to 0.5.
- Bump: Newtonsoft.Json to 11.0.2.
- Bump: MSTest.TestFramework to 1.3.2.
- Bump: MSTest.TestAdapter to 1.3.2.
- Bump: Microsoft.NET.Test.Sdk to 15.9.0.

v0.9
====

Released on October 26, 2018.

- New: FromJson() de-serializza stream JSON.
- Fix: PECDestinatario può essere vuoto quando CodiceDestinatario è 0000000. Closes #75.
- Fix: Le proprietà di tipo Class non sono scrivibili. Closes #76.
- Fix: ToJson() serializza proprietà che non dovrebbero comparire nel JON.
- I test ora girano come app NetCore 2.1. Addresses FatturaElettronica/FatturaElettronica.Core#4.

v0.8.5
======

Released on October 16, 2018.

- New: Validazione errore 00426 per campo 1.1.6 PECDestinatario. Closes #74.
- Fix: errore descrizione in RegimeFiscale "RF17". Closes #72.
- Fix: "Nullable object must have a value" in validazione di blocco ScontoMaggiorazione con Importo = 0. Closes #71.

v0.8.4
======

Released on October 4, 2018.
